src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__ref_pattern_in_match.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 16,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 16,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Ref {
                                                    mutable: false,
                                                    inner: Pattern {
                                                        kind: TupleStruct {
                                                            path: TypePath {
                                                                segments: [
                                                                    TypePathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 20,
                                                                                end: 24,
                                                                                start_line: 1,
                                                                                start_col: 21,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 20,
                                                                    end: 24,
                                                                    start_line: 1,
                                                                    start_col: 21,
                                                                },
                                                            },
                                                            fields: [
                                                                Pattern {
                                                                    kind: Ident {
                                                                        by_ref: false,
                                                                        mutable: false,
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 4,
                                                                            },
                                                                            span: Span {
                                                                                start: 25,
                                                                                end: 26,
                                                                                start_line: 1,
                                                                                start_col: 26,
                                                                            },
                                                                        },
                                                                        subpattern: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 25,
                                                                        end: 26,
                                                                        start_line: 1,
                                                                        start_col: 26,
                                                                    },
                                                                },
                                                            ],
                                                            rest_pos: None,
                                                        },
                                                        span: Span {
                                                            start: 20,
                                                            end: 27,
                                                            start_line: 1,
                                                            start_col: 21,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 19,
                                                    end: 27,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 31,
                                                                        end: 32,
                                                                        start_line: 1,
                                                                        start_col: 32,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 31,
                                                            end: 32,
                                                            start_line: 1,
                                                            start_col: 32,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 31,
                                                    end: 32,
                                                    start_line: 1,
                                                    start_col: 32,
                                                },
                                            },
                                            span: Span {
                                                start: 19,
                                                end: 32,
                                                start_line: 1,
                                                start_col: 20,
                                            },
                                        },
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Ref {
                                                    mutable: false,
                                                    inner: Pattern {
                                                        kind: Ident {
                                                            by_ref: false,
                                                            mutable: false,
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 5,
                                                                },
                                                                span: Span {
                                                                    start: 35,
                                                                    end: 39,
                                                                    start_line: 1,
                                                                    start_col: 36,
                                                                },
                                                            },
                                                            subpattern: None,
                                                        },
                                                        span: Span {
                                                            start: 35,
                                                            end: 39,
                                                            start_line: 1,
                                                            start_col: 36,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 34,
                                                    end: 39,
                                                    start_line: 1,
                                                    start_col: 35,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 0,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 43,
                                                            end: 44,
                                                            start_line: 1,
                                                            start_col: 44,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 43,
                                                    end: 44,
                                                    start_line: 1,
                                                    start_col: 44,
                                                },
                                            },
                                            span: Span {
                                                start: 34,
                                                end: 44,
                                                start_line: 1,
                                                start_col: 35,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 46,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 48,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 48,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 48,
        start_line: 1,
        start_col: 1,
    },
}
